Add poll for single post view

--- a/app/assets/stylesheets/new-templates.css.scss
+++ b/app/assets/stylesheets/new-templates.css.scss
@@ -26,6 +26,7 @@
 @import 'footer';
 @import 'bootstrap-headerfix';
 @import 'opengraph';
+@import 'poll';
 @import 'single-post-view';
 
 /* conversations */
